# distributed-exchange-benchmarking-system

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  clippy.toml  gen-schema.sh  todos.md
apps/web/: Taskfile.yml  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/app/: page.tsx
apps/web/src/components/: auth.tsx  protected-route.tsx
apps/web/src/context/: auth-context.tsx
apps/web/src/hooks/: use-auth.ts
apps/web/src/lib/: api-client.ts  auth-storage.ts  config.ts  jwt.ts
apps/web/src/types/: user.ts
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/database/: Cargo.toml  build.rs
libs/database/queries/: query.sql
libs/database/queries/submit/: query.sql
libs/database/src/: generated.rs  lib.rs
libs/kafka-service/: Cargo.toml
libs/kafka-service/src/: lib.rs
libs/protocol/: Cargo.toml
libs/protocol/src/: client.rs  lib.rs  server.rs  types.rs
libs/shared-type/: Cargo.toml
libs/shared-type/src/: lib.rs
schema/: schema.sql
services/bot-fleet/: Cargo.toml  Taskfile.yml
services/bot-fleet/src/: main.rs
services/bot-fleet/src/listener/: mod.rs
services/bot-fleet/src/validator/: clob.rs  mod.rs  state_machine.rs  types.rs  wire_protocol.rs
services/bot-fleet/src/worker/: mod.rs
services/sandbox/: Cargo.toml  Taskfile.yml
services/sandbox-engine/: Cargo.toml  Taskfile.yml
services/sandbox/src/: main.rs
services/server/: .golangci.yml  Taskfile.yml  go.mod  go.sum  readme.md  sqlc.yaml
services/server/api/modules/: route.go
services/server/cmd/server/: main.go
services/server/docs/: docs.go  swagger.json  swagger.yaml
services/server/internal/app/: app.go
services/server/pkg/apierr/: errors.go
services/server/pkg/apiresponse/: api-response.go
services/server/pkg/config/: config.go
services/server/pkg/core/: kafka.go
services/server/pkg/database/: postgres.go
services/server/pkg/logger/: logger.go
services/server/pkg/shared/: github-auth.go  json-utils.go  shared-main.go  token-utils.go
(+28 files in other folders)
