[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
cornucopia_async = { version = "0.6", features = ["deadpool", "with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

[build-dependencies]
cornucopia = "0.9"